# zensql

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude/: settings.json  settings.json.bak
.claude/skills/sql_add_repo/: SKILL.md
.claude/skills/sql_find_business_context/: SKILL.md
.claude/skills/sql_get_table/: SKILL.md
docs/: ACCEPTANCE_REPORT.md  PLAN.md  metabase_api.json  metabase_mariadb_pre_query  metabase_query  progress.md
scripts/: run_bot.py  run_schema_mcp.py  run_server.py
tests/integration/: test_agent_server_api.py  test_schema_mcp.py
tests/unit/: test_agent_client.py  test_agent_runner.py  test_audit.py  test_crg_sync.py  test_intent_guard.py  test_metabase_client.py  test_normalizer.py  test_orchestrator.py  test_prompts.py  test_queries.py  test_registry_cli.py  test_registry_store.py  test_session.py  test_settings.py  test_telegram_handler.py  test_validator.py
zen/code_graph/: __init__.py  crg_sync.py
zen/config/: settings.py
zen/mcp_tools/: errors.py
zen/models/: audit.py  metadata.py  requests.py  responses.py  safety.py
zen/registry/: __init__.py  cli.py  models.py  store.py
zen/schema_mcp/: metabase_client.py  normalizer.py  queries.py  server.py  tools.py
zen/sql_agent_server/: agent_runner.py  app.py  audit.py  deps.py  intent_guard.py  orchestrator.py  prompts.py  routes_generate.py  routes_health.py  session.py  validator.py
zen/telegram_bot/: bot.py  client.py  handlers.py
