[project]
name = "zensql"
version = "0.1.0"
description = "Telegram-fronted SQL generation agent (text-only, never executes generated SQL)"
requires-python = ">=3.12,<3.14"
authors = [{ name = "zensql team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.13",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "mcp>=1.0",
    "sqlglot>=25.30",
    "python-json-logger>=2.0",
    "code-review-graph>=2.3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zen"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RET"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiogram.*", "mcp.*", "respx.*", "pythonjsonlogger.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests that spawn subprocesses or hit local stubs",
    "e2e: end-to-end mocked tests",
]
